--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         </section>
     </header>
 
-    <script src="../js/movie.js"></script>
+    <script src="/js/movie.js"></script>
 </body>
 
 </html>
